[gd_scene load_steps=20 format=3 uid="uid://bgdnuqx4a3jm7"]

[ext_resource type="PackedScene" uid="uid://c7xy671srn8rt" path="res://Enemies/Obstacle.tscn" id="1_e8dws"]
[ext_resource type="Material" uid="uid://ckh2l5ahtylxl" path="res://Shader/drop_shadow.tres" id="2_2ugaj"]
[ext_resource type="Script" path="res://Enemies/Satellite/satellite.gd" id="2_6vcrh"]
[ext_resource type="Texture2D" uid="uid://ds65ogo3ytjd" path="res://Enemies/Satellite/satellite.svg" id="2_r0xs0"]
[ext_resource type="Texture2D" uid="uid://bb3sf8llr8jwg" path="res://Enemies/Satellite/gear.svg" id="3_khqdg"]
[ext_resource type="AudioStream" uid="uid://ce5m3dxget042" path="res://Enemies/Satellite/satellite_hit.wav" id="5_leqcr"]
[ext_resource type="Texture2D" uid="uid://dsjy7ft70oyse" path="res://Player/flame_particle.svg" id="6_iw02a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_obnki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_r0xs0")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_0sqmb"]
_data = [Vector2(0.0343511, 0.456604), 0.0, 0.0, 0, 0, Vector2(0.576336, 0.562264), 0.382715, 0.382715, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_th6oy"]
offsets = PackedFloat32Array(0, 0.839286)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Shader" id="Shader_64uhu"]
code = "/**
* Shadow 2D.
* License: CC0
* https://creativecommons.org/publicdomain/zero/1.0/
*/
shader_type canvas_item;
render_mode blend_mix;

uniform vec2 deform = vec2(2.0, 2.0);
uniform vec2 offset = vec2(0.0, 0.0);
uniform vec4 modulate : source_color;

//uniform vec2 texture_size; //uncomment for GLES2

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	vec2 uv = UV;
	float sizex = float(textureSize(TEXTURE,int(ps.x)).x); //comment for GLES2
	float sizey = float(textureSize(TEXTURE,int(ps.y)).y); //comment for GLES2
	//float sizex = texture_size.x; //uncomment for GLES2
	//float sizey = texture_size.y; //uncomment for GLES2
	uv.y+=offset.y*ps.y;
	uv.x+=offset.x*ps.x;
	float decalx=((uv.y-ps.x*sizex)*deform.x);
	float decaly=((uv.y-ps.y*sizey)*deform.y);
	uv.x += decalx;
	uv.y += decaly;
	vec4 shadow = vec4(modulate.rgb, texture(TEXTURE, uv).a * modulate.a);
	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7dibl"]
shader = SubResource("Shader_64uhu")
shader_parameter/deform = Vector2(0, 0)
shader_parameter/offset = Vector2(-10, -10)
shader_parameter/modulate = Color(0, 0, 0, 0.784314)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qd55y"]
size = Vector2(100, 147)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vrcsk"]
shader = SubResource("Shader_64uhu")
shader_parameter/deform = Vector2(0, 0)
shader_parameter/offset = Vector2(-10, -10)
shader_parameter/modulate = Color(0, 0, 0, 0.392157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyryw"]
size = Vector2(139.413, 267.936)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_naegi"]
size = Vector2(136.301, 281.92)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t1j4t"]
shader = SubResource("Shader_64uhu")
shader_parameter/deform = Vector2(0, 0)
shader_parameter/offset = Vector2(-10, -10)
shader_parameter/modulate = Color(0, 0, 0, 0.392157)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nfb2"]
size = Vector2(135.557, 287.713)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_upw1j"]
radius = 83.0
height = 218.0

[node name="Satellite" instance=ExtResource("1_e8dws")]
scale = Vector2(0.6, 0.6)
script = ExtResource("2_6vcrh")
free_fall_multiplier = 1.5
can_move_horizontally = false
obstacle_type = 1

[node name="CPUParticles2D" parent="." index="0"]
amount = 20
texture = ExtResource("3_khqdg")

[node name="VisibleOnScreenNotifier2D" parent="." index="1"]
position = Vector2(10, -97.5004)
scale = Vector2(1.90667, 15.7)
rect = Rect2(-125, -25, 250, 50)

[node name="AnimatedSprite2D" parent="." index="2"]
visible = false
material = ExtResource("2_2ugaj")
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_obnki")

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(21, 11.5)
rotation = 0.523598
shape = null
disabled = true

[node name="WarnTimer" type="Timer" parent="." index="4"]

[node name="Parts" type="Node2D" parent="." index="5"]
rotation = 0.523599

[node name="SmokeParticles" type="CPUParticles2D" parent="Parts" index="0"]
emitting = false
amount = 35
lifetime = 0.5
texture = ExtResource("6_iw02a")
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 350.0
initial_velocity_max = 350.0
scale_amount_min = 30.0
scale_amount_max = 45.0
scale_amount_curve = SubResource("Curve_0sqmb")
color_ramp = SubResource("Gradient_th6oy")

[node name="SmallCylinder" type="Node2D" parent="Parts" index="1"]
visible = false
position = Vector2(6.63844, -180.502)

[node name="Sprite2D" type="Sprite2D" parent="Parts/SmallCylinder" index="0"]
material = SubResource("ShaderMaterial_7dibl")
texture = ExtResource("2_r0xs0")
region_enabled = true
region_rect = Rect2(304, 118, 181, 137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/SmallCylinder" index="1"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_qd55y")

[node name="MainBody" type="Node2D" parent="Parts" index="2"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Parts/MainBody" index="0"]
material = SubResource("ShaderMaterial_vrcsk")
texture = ExtResource("2_r0xs0")
region_enabled = true
region_rect = Rect2(294.5, 277.094, 194, 311.906)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/MainBody" index="1"]
shape = SubResource("RectangleShape2D_iyryw")

[node name="PanelRight" type="Node2D" parent="Parts" index="3"]
visible = false
position = Vector2(214.483, 5.49484)

[node name="Sprite2D" type="Sprite2D" parent="Parts/PanelRight" index="0"]
material = ExtResource("2_2ugaj")
texture = ExtResource("2_r0xs0")
region_enabled = true
region_rect = Rect2(484.03, 522.79, 309.912, 175.385)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/PanelRight" index="1"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_naegi")

[node name="PanelLeft" type="Node2D" parent="Parts" index="4"]
visible = false
position = Vector2(-210.983, 0.567329)

[node name="Sprite2D" type="Sprite2D" parent="Parts/PanelLeft" index="0"]
material = SubResource("ShaderMaterial_t1j4t")
texture = ExtResource("2_r0xs0")
offset = Vector2(0, -6)
region_enabled = true
region_rect = Rect2(1.0562, 523.411, 314.964, 170.07)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/PanelLeft" index="1"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_5nfb2")

[node name="Dish" type="Node2D" parent="Parts" index="5"]
visible = false
position = Vector2(-2.39678, 213.849)

[node name="Sprite2D" type="Sprite2D" parent="Parts/Dish" index="0"]
material = ExtResource("2_2ugaj")
texture = ExtResource("2_r0xs0")
offset = Vector2(-6, 0)
region_enabled = true
region_rect = Rect2(273, 807, 234, 202)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Dish" index="1"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_upw1j")

[node name="HitSound" parent="." index="6"]
stream = ExtResource("5_leqcr")
volume_db = 10.0

[connection signal="timeout" from="WarnTimer" to="." method="_on_warn_timer_timeout"]
